--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   },
   "dependencies": {
     "lodash.debounce": "^3.1.1",
-    "react": ">=0.13.0"
+    "react": ">=0.14.0",
+    "react-dom": ">=0.14.0"
   },
   "devDependencies": {
     "autoprefixer-core": "^6.0.1",
